# finserv-agents

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
database/: db_flush.py  demo_reset.py  embeddings.json  generate_embeddings.py  materialize.py  requirements.txt  runtime_config.py  schema.sql  seed_data.py  setup_indices.py
scripts/: sync_arcade_secrets.py
tools/: .env.example  pyproject.toml
tools/src/redis_mcp/: indexing.py  redisvl_gateway.py  runtime_contract.py  server.py
tools/src/redis_mcp/schemas/: borrower.yaml  fraudsignal.yaml  loan.yaml  payment.yaml
web/: next.config.ts  package.json
web/src/app/: client-app.tsx  globals.css  layout.tsx  page.tsx
web/src/app/api/chat/: route.ts
web/src/app/api/redis/context/: route.ts
web/src/components/chat/: ChatInput.tsx  ChatPanel.tsx  MessageBubble.tsx  MessageList.tsx  SuggestionPills.tsx  ToolCallCard.tsx  TypingIndicator.tsx
web/src/components/layout/: AppShell.tsx  ContextPanel.tsx  Header.tsx
web/src/lib/: claude.ts  mcp-client.ts  tool-registry.ts  types.ts
