[project]
name = "finserv-mcp-server"
version = "0.2.0"
description = "FinServ Agents — Domain-specific MCP tools for loan servicing and Redis context"
requires-python = ">=3.10"
dependencies = [
    "arcade-mcp-server>=1.11.1,<2.0.0",
    "redis[hiredis]>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/redis_mcp"]
